# server/api/controllers/recipes/controller.js
@@ -2,6 +2,8 @@ import RecipeService from './service';
 import logger from '../../../common/logger';
 import sanitizeHtml from 'sanitize-html';
 import slug from 'limax';
+import cuid from 'cuid';
+import cloudinary from 'cloudinary';
 
 export class Controller {
 
@@ -22,11 +24,12 @@ export class Controller {
   }
 
   create(req, res) {
-    if (!req.user || !req.user.cuid) {
+    if (!req.user || !req.user.id) {
       return res.status(401).end();
     }
 
     const recipe = req.body;
+    const hasImage = recipe.image && recipe.image.id;
 
     if (!recipe.title
       || (!recipe.ingredients && recipe.ingredients.length)
@@ -40,15 +43,20 @@ export class Controller {
 
     const cleanedRecipe = {
       id: cuid(),
+      createdAt: Date.now(),
       title: sanitizeHtml(recipe.title),
       slug: slug(recipe.title.toLowerCase(), { lowercase: true }),
       description: sanitizeHtml(recipe.description),
       instructions: sanitizeHtml(recipe.instructions, instructionsHtmlConfig),
-      youtubeUrl: recipe.youtubeUrl,
+      categories: recipe.categories,
+      ingredients: recipe.ingredients.filter(i => !i.custom),
+      customIngredients: recipe.ingredients.filter(i => i.custom),
+      thumbnailUrl: hasImage ? recipe.image.thumbnailUrl : '',
+      image: recipe.image,
     };
   
     RecipeService
-      .create(cleanedRecipe)
+      .create(cleanedRecipe, req.user)
       .then(r => {
         if (r) res.json(r);
         else res.status(404).end();
